Fix staticController